--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=class_ms
+spring.datasource.url=jdbc:mysql://localhost:4306/classes_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+server.port=8084
+
+app.jwt.secret=7d9F!2xA@9#LKP0mQwZ8sR1EJfYtU4cB
+app.jwt.expiration-ms=3600000
+
+logging.level.org.springframework=INFO
+logging.level.com.teacher_ms=DEBUG
