--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 server.port=8084
 
-app.jwt.secret=7d9F!2xA@9#LKP0mQwZ8sR1EJfYtU4cB
+app.jwt.secret=7d9F!2xA@9#LkP0mQwZ8sR1EJfYtU4cB
 app.jwt.expiration-ms=3600000
 
 logging.level.org.springframework=INFO
